--- a/aws-devops.html
+++ b/aws-devops.html
@@ -586,8 +586,8 @@
                 </div>
             </div>
         </div>
-        <div class="space-extra"></div>
-        <div class="container mt-1 px-3">
+        <div class="container space-top"></div>
+        <div class="container">
             <section class="arrow-wrap shape-mockup-wrap" id="team-sec">
                 <div class="brand-sec1 arrow-wrap" data-pos-for="#process-sec" data-sec-pos="top-half"
                     style="margin-top: -95px;">
@@ -665,9 +665,8 @@
                     </div>
                 </div>
         
-                <div class="shape-mockup" style="top: 0px; right: 0px;"><img src="assets/img/shape/tech_shape_1.png"
-                        alt="shape"></div>
-                <div class="shape-mockup" style="top: 0%; left: 0%;"><img src="assets/img/shape/square_1.png" alt="shape"></div>
+                <div class="shape-mockup" style="top: 0px; right: 0px;"></div>
+                <div class="shape-mockup" style="top: 0%; left: 0%;"></div>
             </section>
         </div>
         <div class="container mt-5 px-3">
