--- a/fullstack.html
+++ b/fullstack.html
@@ -57,7 +57,8 @@
                     <div class="col-auto d-none d-lg-block">
                         <div class="header-links">
                             <ul>
-                                <li><i class="fas fa-phone"></i><a href="tel:+918484039108">+91-8484039108</a> | <a href="tel:+918484049108">+91-8484049108</a></li>
+                                <li><i class="fas fa-phone"></i><a href="tel:+918484039108">+91-8484039108</a> | <a
+                                        href="tel:+918484049108">+91-8484049108</a></li>
                                 <li><i class="fas fa-envelope"></i>
                                     <ahref="mailto:info@achievertech.co.in">info@achievertech.co.in</a>
                                 </li>
@@ -198,7 +199,7 @@
                                     <li>Bootstrap Typography, Colors, Images</li>
                                     <li>Bootstrap Components (Navbar, Cards, Forms)</li>
                                 </ul>
-                             </div>
+                            </div>
                         </div>
                     </div>
 
@@ -345,10 +346,114 @@
                 </div>
                 <div class="text-center mt-5">
 
-                    <br/><br/><br/>
+                    <br /><br /><br />
 
                 </div>
             </div>
+        </div>
+        <div class="space-top"></div>
+        <div class="container">
+            <div class="container">
+                <section class="arrow-wrap shape-mockup-wrap" id="team-sec">
+                    <div class="brand-sec1 arrow-wrap" data-pos-for="#process-sec" data-sec-pos="top-half"
+                        style="margin-top: -95px;">
+                        <div class="container py-5">
+                            <div class="slider-area text-center">
+                                <div class="swiper th-slider swiper-initialized swiper-horizontal" id="brandSlider1"
+                                    data-slider-options="{&quot;breakpoints&quot;:{&quot;0&quot;:{&quot;slidesPerView&quot;:2},&quot;576&quot;:{&quot;slidesPerView&quot;:&quot;2&quot;},&quot;768&quot;:{&quot;slidesPerView&quot;:&quot;3&quot;},&quot;992&quot;:{&quot;slidesPerView&quot;:&quot;3&quot;},&quot;1200&quot;:{&quot;slidesPerView&quot;:&quot;4&quot;},&quot;1400&quot;:{&quot;slidesPerView&quot;:&quot;5&quot;}}}">
+                                    <div class="swiper-wrapper" id="swiper-wrapper-5997d152d487a9af" aria-live="off"
+                                        style="transition-duration: 1000ms; transform: translate3d(-746.4px, 0px, 0px);">
+                                        <div class="swiper-slide" style="width: 224.8px; margin-right: 24px;"
+                                            role="group" aria-label="14 / 24" data-swiper-slide-index="6">
+                                            <div class="brand-box py-20"><img src="assets/img/brand/brand_2_1.png"
+                                                    alt="Brand Logo">
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide" style="width: 224.8px; margin-right: 24px;"
+                                            role="group" aria-label="8 / 12" data-swiper-slide-index="7">
+                                            <div class="brand-box py-20"><img src="assets/img/brand/brand_2_2.png"
+                                                    alt="Brand Logo">
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide swiper-slide-prev"
+                                            style="width: 224.8px; margin-right: 24px;" role="group" aria-label="9 / 12"
+                                            data-swiper-slide-index="8">
+                                            <div class="brand-box py-20"><img src="assets/img/brand/brand_2_3.png"
+                                                    alt="Brand Logo">
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide swiper-slide-active"
+                                            style="width: 224.8px; margin-right: 24px;" role="group"
+                                            aria-label="10 / 12" data-swiper-slide-index="9">
+                                            <div class="brand-box py-20"><img src="assets/img/brand/brand_2_4.png"
+                                                    alt="Brand Logo">
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide swiper-slide-next"
+                                            style="width: 224.8px; margin-right: 24px;" role="group"
+                                            aria-label="11 / 12" data-swiper-slide-index="10">
+                                            <div class="brand-box py-20"><img src="assets/img/brand/brand_2_5.png"
+                                                    alt="Brand Logo">
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide" role="group" aria-label="12 / 12"
+                                            style="width: 224.8px; margin-right: 24px;" data-swiper-slide-index="11">
+                                            <div class="brand-box py-20"><img src="assets/img/brand/brand_2_6.png"
+                                                    alt="Brand Logo">
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide" style="width: 224.8px; margin-right: 24px;"
+                                            role="group" aria-label="1 / 12" data-swiper-slide-index="0">
+                                            <div class="brand-box py-20"><img src="assets/img/brand/brand_2_1.png"
+                                                    alt="Brand Logo">
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide" style="width: 224.8px; margin-right: 24px;"
+                                            role="group" aria-label="2 / 12" data-swiper-slide-index="1">
+                                            <div class="brand-box py-20"><img src="assets/img/brand/brand_2_2.png"
+                                                    alt="Brand Logo">
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide" style="width: 224.8px; margin-right: 24px;"
+                                            role="group" aria-label="3 / 12" data-swiper-slide-index="2">
+                                            <div class="brand-box py-20"><img src="assets/img/brand/brand_2_3.png"
+                                                    alt="Brand Logo">
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide" style="width: 224.8px; margin-right: 24px;"
+                                            role="group" aria-label="4 / 12" data-swiper-slide-index="3">
+                                            <div class="brand-box py-20"><img src="assets/img/brand/brand_2_4.png"
+                                                    alt="Brand Logo">
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide" style="width: 224.8px; margin-right: 24px;"
+                                            role="group" aria-label="5 / 12" data-swiper-slide-index="4">
+                                            <div class="brand-box py-20"><img src="assets/img/brand/brand_2_5.png"
+                                                    alt="Brand Logo">
+                                            </div>
+                                        </div>
+                                        <div class="swiper-slide" style="width: 224.8px; margin-right: 24px;"
+                                            role="group" aria-label="6 / 12" data-swiper-slide-index="5">
+                                            <div class="brand-box py-20"><img src="assets/img/brand/brand_2_6.png"
+                                                    alt="Brand Logo">
+                                            </div>
+                                        </div>
+                                    </div><span class="swiper-notification" aria-live="assertive"
+                                        aria-atomic="true"></span>
+                                </div><button data-slider-prev="#brandSlider1"
+                                    class="slider-arrow style3 slider-prev"><i class="far fa-arrow-left"></i></button>
+                                <button data-slider-next="#brandSlider1" class="slider-arrow style3 slider-next"><i
+                                        class="far fa-arrow-right"></i></button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="shape-mockup" style="top: 0px; right: 0px;"></div>
+                    <div class="shape-mockup" style="top: 0%; left: 0%;"></div>
+                </section>
+            </div>
+        </div>
+        <div class="container mt-5 px-3">
             <div class="gx-5 training-features">
                 <h5 class="text-theme">Training Features </h5>
                 <div class="row">
@@ -432,6 +537,7 @@
                 </div>
             </div>
         </div>
+        
     </div>
 
     <!-- Footer Section Start -->
