--- a/courses.html
+++ b/courses.html
@@ -149,9 +149,9 @@
                     <div class="service-card">
                         <div class="shape-icon"><img src="assets/img/icon/service_card_1.svg" alt="Icon"> <span
                                 class="dots"></span></div>
-                        <h3 class="box-title"><a href="service-details.html">Web Development</a></h3>
+                        <h3 class="box-title"><a href="software-testing.html">Manual Testing</a></h3>
                         <p class="service-card_text">Intrinsicly redefine competitive e-business before adaptive
-                            potentialiti. Professionally build progressive users with.</p><a href="service-details.html"
+                            potentialiti. Professionally build progressive users with.</p><a href="software-testing.html"
                             class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
                         <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
                     </div>
@@ -160,9 +160,9 @@
                     <div class="service-card">
                         <div class="shape-icon"><img src="assets/img/icon/service_card_2.svg" alt="Icon"> <span
                                 class="dots"></span></div>
-                        <h3 class="box-title"><a href="service-details.html">UI/UX Design</a></h3>
+                        <h3 class="box-title"><a href="software-testing.html">Automation Testing</a></h3>
                         <p class="service-card_text">Intrinsicly redefine competitive e-business before adaptive
-                            potentialiti. Professionally build progressive users with.</p><a href="service-details.html"
+                            potentialiti. Professionally build progressive users with.</p><a href="software-testing.html"
                             class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
                         <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
                     </div>
@@ -171,9 +171,9 @@
                     <div class="service-card">
                         <div class="shape-icon"><img src="assets/img/icon/service_card_3.svg" alt="Icon"> <span
                                 class="dots"></span></div>
-                        <h3 class="box-title"><a href="service-details.html">Digital Marketing</a></h3>
+                        <h3 class="box-title"><a href="angular.html">Angular Development</a></h3>
                         <p class="service-card_text">Intrinsicly redefine competitive e-business before adaptive
-                            potentialiti. Professionally build progressive users with.</p><a href="service-details.html"
+                            potentialiti. Professionally build progressive users with.</p><a href="angular.html"
                             class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
                         <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
                     </div>
@@ -182,9 +182,9 @@
                     <div class="service-card">
                         <div class="shape-icon"><img src="assets/img/icon/service_card_4.svg" alt="Icon"> <span
                                 class="dots"></span></div>
-                        <h3 class="box-title"><a href="service-details.html">Business Analysis</a></h3>
+                        <h3 class="box-title"><a href="dotnet.html">Dot Net Development</a></h3>
                         <p class="service-card_text">Intrinsicly redefine competitive e-business before adaptive
-                            potentialiti. Professionally build progressive users with.</p><a href="service-details.html"
+                            potentialiti. Professionally build progressive users with.</p><a href="dotnet.html"
                             class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
                         <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
                     </div>
@@ -193,9 +193,9 @@
                     <div class="service-card">
                         <div class="shape-icon"><img src="assets/img/icon/service_card_5.svg" alt="Icon"> <span
                                 class="dots"></span></div>
-                        <h3 class="box-title"><a href="service-details.html">Software Services</a></h3>
+                        <h3 class="box-title"><a href="java.html">Java Full Stack Development</a></h3>
                         <p class="service-card_text">Intrinsicly redefine competitive e-business before adaptive
-                            potentialiti. Professionally build progressive users with.</p><a href="service-details.html"
+                            potentialiti. Professionally build progressive users with.</p><a href="java.html"
                             class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
                         <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
                     </div>
@@ -204,9 +204,9 @@
                     <div class="service-card">
                         <div class="shape-icon"><img src="assets/img/icon/service_card_6.svg" alt="Icon"> <span
                                 class="dots"></span></div>
-                        <h3 class="box-title"><a href="service-details.html">Machine Learning</a></h3>
+                        <h3 class="box-title"><a href="fullstack.html">UI Full Stack Development</a></h3>
                         <p class="service-card_text">Intrinsicly redefine competitive e-business before adaptive
-                            potentialiti. Professionally build progressive users with.</p><a href="service-details.html"
+                            potentialiti. Professionally build progressive users with.</p><a href="fullstack.html"
                             class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
                         <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
                     </div>
@@ -215,31 +215,9 @@
                     <div class="service-card">
                         <div class="shape-icon"><img src="assets/img/icon/service_card_7.svg" alt="Icon"> <span
                                 class="dots"></span></div>
-                        <h3 class="box-title"><a href="service-details.html">IT Management</a></h3>
+                        <h3 class="box-title"><a href="aws-devops.html">AWS & DevOps</a></h3>
                         <p class="service-card_text">Intrinsicly redefine competitive e-business before adaptive
-                            potentialiti. Professionally build progressive users with.</p><a href="service-details.html"
-                            class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
-                        <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-xl-4">
-                    <div class="service-card">
-                        <div class="shape-icon"><img src="assets/img/icon/service_card_8.svg" alt="Icon"> <span
-                                class="dots"></span></div>
-                        <h3 class="box-title"><a href="service-details.html">Cloud Computing</a></h3>
-                        <p class="service-card_text">Intrinsicly redefine competitive e-business before adaptive
-                            potentialiti. Professionally build progressive users with.</p><a href="service-details.html"
-                            class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
-                        <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-xl-4">
-                    <div class="service-card">
-                        <div class="shape-icon"><img src="assets/img/icon/service_card_9.svg" alt="Icon"> <span
-                                class="dots"></span></div>
-                        <h3 class="box-title"><a href="service-details.html">Backup &amp; Recovery</a></h3>
-                        <p class="service-card_text">Intrinsicly redefine competitive e-business before adaptive
-                            potentialiti. Professionally build progressive users with.</p><a href="service-details.html"
+                            potentialiti. Professionally build progressive users with.</p><a href="aws-devops.html"
                             class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
                         <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
                     </div>
