--- a/courses.html
+++ b/courses.html
@@ -151,8 +151,9 @@
                                 class="dots"></span></div>
                         <h3 class="box-title"><a href="software-testing.html">Manual Testing</a></h3>
                         <p class="service-card_text">Intrinsicly redefine competitive e-business before adaptive
-                            potentialiti. Professionally build progressive users with.</p><a href="software-testing.html"
-                            class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
+                            potentialiti. Professionally build progressive users with.</p><a
+                            href="software-testing.html" class="th-btn">Read More<i
+                                class="fa-regular fa-arrow-right ms-2"></i></a>
                         <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
                     </div>
                 </div>
@@ -162,8 +163,9 @@
                                 class="dots"></span></div>
                         <h3 class="box-title"><a href="software-testing.html">Automation Testing</a></h3>
                         <p class="service-card_text">Intrinsicly redefine competitive e-business before adaptive
-                            potentialiti. Professionally build progressive users with.</p><a href="software-testing.html"
-                            class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
+                            potentialiti. Professionally build progressive users with.</p><a
+                            href="software-testing.html" class="th-btn">Read More<i
+                                class="fa-regular fa-arrow-right ms-2"></i></a>
                         <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
                     </div>
                 </div>
@@ -225,8 +227,6 @@
             </div>
         </div>
     </section>
-
-    
     <!-- Footer Section Start -->
     <footer class="footer-wrapper footer-layout3 background-image"
         style="background-image: url(assets/img/bg/footer_bg_2.jpg);">
