--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                     <div class="two-column">
                         <div class="checklist style2">
                             <ul>
-                                <li><i class="far fa-check"></i> Cutting-edge Technologies</li>
+                                <li><i class="far fa-check"></i> Cutting-Edge Technologies</li>
                                 <li><i class="far fa-check"></i> Weekly Mock Interview</li>
                                 <li><i class="far fa-check"></i> Online / Offline Support</li>
                                 <li><i class="far fa-check"></i> Placement Support</li>
@@ -426,7 +426,7 @@
                                     </div>
                                     <div class="service-3d_content">
                                         <h3 class="box-title">
-                                            <a href="aws-devops.html">AWS and DevOps</a>
+                                            <a href="aws-devops.html">DevOps with AWS</a>
                                         </h3>
                                         <p class="service-3d_text">DevOps integrates and automates the work of software
                                             development (Dev) and IT operations (Ops) as a means for improving and
