changes done in cources page

--- a/courses.html
+++ b/courses.html
@@ -202,7 +202,7 @@
                         <div class="shape-icon"><img src="assets/img/icon/service_card_6.svg" alt="Icon"> <span
                                 class="dots"></span></div>
                         <h3 class="box-title"><a href="fullstack.html">UI Full Stack Development</a></h3>
-                        <p class="service-card_text">In UI Full Stack Development fundamentals of frontend development, mastering HTML, CSS, and JavaScript, while also exploring advanced concepts and popular frameworks like React and Angular.</p><a href="fullstack.html"
+                        <p class="service-card_text">In UI Full Stack fundamentals of frontend development, mastering HTML, CSS, and JavaScript, while also exploring advanced concepts and popular frameworks like React and Angular.</p><a href="fullstack.html"
                             class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
                         <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
                     </div>
