devops pages changes

--- a/aws-devops.html
+++ b/aws-devops.html
@@ -586,7 +586,7 @@
                 </div>
             </div>
         </div>
-        <div class="container space-top"></div>
+        <!-- <div class="container space-top"></div>
         <div class="container">
             <section class="arrow-wrap shape-mockup-wrap" id="team-sec">
                 <div class="brand-sec1 arrow-wrap" data-pos-for="#process-sec" data-sec-pos="top-half"
@@ -668,7 +668,7 @@
                 <div class="shape-mockup" style="top: 0px; right: 0px;"></div>
                 <div class="shape-mockup" style="top: 0%; left: 0%;"></div>
             </section>
-        </div>
+        </div> -->
         <div class="container mt-5 px-3">
             <div class="gx-5 training-features">
                 <h5 class="text-theme">Training Features </h5>
