code formatting done on all pages

--- a/courses.html
+++ b/courses.html
@@ -150,9 +150,10 @@
                         <div class="shape-icon"><img src="assets/img/icon/service_card_1.svg" alt="Icon"> <span
                                 class="dots"></span></div>
                         <h3 class="box-title"><a href="software-testing.html">Manual Testing</a></h3>
-                        <p class="service-card_text">Manual testing is the process of manually testing software for defects. It requires a tester to play the role of an end user where by they use most of the application's features to ensure correct behaviour.</p><a
-                            href="software-testing.html" class="th-btn">Read More<i
-                                class="fa-regular fa-arrow-right ms-2"></i></a>
+                        <p class="service-card_text">Manual testing is the process of manually testing software for
+                            defects. It requires a tester to play the role of an end user where by they use most of the
+                            application's features to ensure correct behaviour.</p><a href="software-testing.html"
+                            class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
                         <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
                     </div>
                 </div>
@@ -161,7 +162,9 @@
                         <div class="shape-icon"><img src="assets/img/icon/service_card_2.svg" alt="Icon"> <span
                                 class="dots"></span></div>
                         <h3 class="box-title"><a href="software-testing.html">Automation Testing</a></h3>
-                        <p class="service-card_text">Automation testing is a software testing technique that uses specialized tools and scripts to automate the execution of predetermined test cases and verify the behavior and performance of software applications.</p><a
+                        <p class="service-card_text">Automation testing is a software testing technique that uses
+                            specialized tools and scripts to automate the execution of predetermined test cases and
+                            verify the behavior and performance of software applications.</p><a
                             href="software-testing.html" class="th-btn">Read More<i
                                 class="fa-regular fa-arrow-right ms-2"></i></a>
                         <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
@@ -172,8 +175,10 @@
                         <div class="shape-icon"><img src="assets/img/icon/service_card_3.svg" alt="Icon"> <span
                                 class="dots"></span></div>
                         <h3 class="box-title"><a href="angular.html">Angular Development</a></h3>
-                        <p class="service-card_text">Angular is a popular TypeScript-based open-source web application framework created by Google. Angular is a development platform built on TypeScript. It is a complete rewrite of AngularJS.</p><a href="angular.html"
-                            class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
+                        <p class="service-card_text">Angular is a popular TypeScript-based open-source web application
+                            framework created by Google. Angular is a development platform built on TypeScript. It is a
+                            complete rewrite of AngularJS.</p><a href="angular.html" class="th-btn">Read More<i
+                                class="fa-regular fa-arrow-right ms-2"></i></a>
                         <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
                     </div>
                 </div>
@@ -182,8 +187,10 @@
                         <div class="shape-icon"><img src="assets/img/icon/service_card_4.svg" alt="Icon"> <span
                                 class="dots"></span></div>
                         <h3 class="box-title"><a href="dotnet.html">Dot Net Development</a></h3>
-                        <p class="service-card_text">NET is a versatile, open-source developer platform created by Microsoft. It supports building a wide range of applications, including web, mobile, desktop, games, IoT, cloud, and microservices.</p><a href="dotnet.html"
-                            class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
+                        <p class="service-card_text">NET is a versatile, open-source developer platform created by
+                            Microsoft. It supports building a wide range of applications, including web, mobile,
+                            desktop, games, IoT, cloud, and microservices.</p><a href="dotnet.html" class="th-btn">Read
+                            More<i class="fa-regular fa-arrow-right ms-2"></i></a>
                         <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
                     </div>
                 </div>
@@ -192,7 +199,9 @@
                         <div class="shape-icon"><img src="assets/img/icon/service_card_5.svg" alt="Icon"> <span
                                 class="dots"></span></div>
                         <h3 class="box-title"><a href="java.html">Full Stack Development</a></h3>
-                        <p class="service-card_text">Full Stack Development is a software development process that includes both the front and back end. A Full Stack Developer is a professional who can design, develop, and maintain complete web applications and websites</p><a href="java.html"
+                        <p class="service-card_text">Full Stack Development is a software development process that
+                            includes both the front and back end. A Full Stack Developer is a professional who can
+                            design, develop, and maintain complete web applications and websites</p><a href="java.html"
                             class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
                         <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
                     </div>
@@ -202,8 +211,10 @@
                         <div class="shape-icon"><img src="assets/img/icon/service_card_6.svg" alt="Icon"> <span
                                 class="dots"></span></div>
                         <h3 class="box-title"><a href="fullstack.html">UI Full Stack Development</a></h3>
-                        <p class="service-card_text">In UI Full Stack fundamentals of frontend development, mastering HTML, CSS, and JavaScript, while also exploring advanced concepts and popular frameworks like React and Angular.</p><a href="fullstack.html"
-                            class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
+                        <p class="service-card_text">In UI Full Stack fundamentals of frontend development, mastering
+                            HTML, CSS, and JavaScript, while also exploring advanced concepts and popular frameworks
+                            like React and Angular.</p><a href="fullstack.html" class="th-btn">Read More<i
+                                class="fa-regular fa-arrow-right ms-2"></i></a>
                         <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
                     </div>
                 </div>
@@ -212,8 +223,12 @@
                         <div class="shape-icon"><img src="assets/img/icon/service_card_7.svg" alt="Icon"> <span
                                 class="dots"></span></div>
                         <h3 class="box-title"><a href="aws-devops.html">DevOps with AWS</a></h3>
-                        <p class="service-card_text">This course provides comprehensive training in DevOps practices and tools within the AWS (Amazon Web Services) ecosystem. Participants will learn how to leverage AWS services to implement continuous integration, continuous deployment, infrastructure as code, monitoring, and more, all while adhering to DevOps principles.</p><a href="aws-devops.html"
-                            class="th-btn">Read More<i class="fa-regular fa-arrow-right ms-2"></i></a>
+                        <p class="service-card_text">This course provides comprehensive training in DevOps practices and
+                            tools within the AWS (Amazon Web Services) ecosystem. Participants will learn how to
+                            leverage AWS services to implement continuous integration, continuous deployment,
+                            infrastructure as code, monitoring, and more, all while adhering to DevOps principles.</p><a
+                            href="aws-devops.html" class="th-btn">Read More<i
+                                class="fa-regular fa-arrow-right ms-2"></i></a>
                         <div class="bg-shape"><img src="assets/img/bg/service_card_bg.png" alt="bg"></div>
                     </div>
                 </div>
