--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,8 @@
                     <div class="col-auto d-none d-lg-block">
                         <div class="header-links">
                             <ul>
-                                <li><i class="fas fa-phone"></i><a href="tel:+918484039108">+91-8484039108</a> | <a href="tel:+918484049108">+91-8484049108</a></li>
+                                <li><i class="fas fa-phone"></i><a href="tel:+918484039108">+91-8484039108</a> | <a
+                                        href="tel:+918484049108">+91-8484049108</a></li>
                                 <li><i class="fas fa-envelope"></i>
                                     <ahref="mailto:info@achievertech.co.in">info@achievertech.co.in</a>
                                 </li>
@@ -270,7 +271,8 @@
                                     and industry insights to our training and placement programs</p>
                                 <div class="th-social"><a href="#"><i class="fab fa-facebook-f"></i></a> <a><i
                                             class="fab fa-whatsapp"></i></a> <a href="#"><i
-                                            class="fab fa-youtube"></i></a><a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a></div>
+                                            class="fab fa-youtube"></i></a><a href="https://www.instagram.com/"><i
+                                            class="fab fa-instagram"></i></a></div>
                             </div>
                         </div>
                     </div>
