--- a/dotnet.html
+++ b/dotnet.html
@@ -57,7 +57,8 @@
                     <div class="col-auto d-none d-lg-block">
                         <div class="header-links">
                             <ul>
-                                <li><i class="fas fa-phone"></i><a href="tel:+918484039108">+91-8484039108</a> | <a href="tel:+918484049108">+91-8484049108</a></li>
+                                <li><i class="fas fa-phone"></i><a href="tel:+918484039108">+91-8484039108</a> | <a
+                                        href="tel:+918484049108">+91-8484049108</a></li>
                                 <li><i class="fas fa-envelope"></i>
                                     <ahref="mailto:info@achievertech.co.in">info@achievertech.co.in</a>
                                 </li>
@@ -752,7 +753,7 @@
                 </div>
                 <div class="text-center mt-5">
 
-                    <br/><br/><br/>
+                    <br /><br /><br />
 
                 </div>
             </div>
